fix доработки после 2 ревью